test/ui/src/compile_fail/std/new_span_unused.rs
#![deny(unused_must_use)]

fn main() {
    emit::new_span!("test");
}
